2001-05-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/Query.{ch}: added date-granularity sorting functionality
	to queries.

	* src/engine/date.[ch] (timespecCanonicalDayTime): new function
	migrated from the scheme code.

	* src/guile/gnc.gwp: added wrappers for the above.

	* src/scm/date-utilities.scm (gnc:timepair-canonical-day-time):
	removed, replaced by new C function.

	* src/scm/report/*.scm: added checks for "no-accounts-selected".
		
	* src/scm/report/average-balance-2.scm: New (temporary) file. 
	The average balance report with a rewritten calculation engine.

	* src/scm/report/register.scm: Modified to use global styles

	* src/scm/report/transaction-report.scm: use improved sorting ability,
	get report title from options.

	* src/scm/html-utilities.scm (gnc:html-make-no-account-warning): new
	function. (remove-last-empty-row): minor changes.

	* src/scm/report-utilities.scm: added the ability to get "numitems"
	out of a stats collector for debugging purposes.

2001-04-30  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-worth-timeseries.scm,
	income-expense-chart.scm: removed files.

2001-04-29  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (gnc_locale_default_currency): handle no
	default currency

	* src/gnome/dialog-transfer.c: fix bugs

2001-04-28  Christian Stimming  <stimming@tuhh.de>

	* src/scm/date-utilities.scm: Fixed a whole lot of bugs in the
	relative-date functions (did *nobody* ever test those???). Added
	relative dates end-cal-year, end-current-quarter, and
	end-this-month. Added comments.

	* src/scm/options-utilities.scm: Changed date-options to be combo
	options of both relative and absolute dates.

	* src/scm/report/portfolio.scm, taxtxf.scm: adapt to usual option
	conventions.

	* src/scm/report/account-summary.scm: Fix bug.

2001-04-27  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/balance-sheet.scm: Added workaround for gtkhtml
	column width.
